proof that cubics with a plane are sometimes geometric

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,6 +15,16 @@
     volume = {38},
     year = {1994},
 }
+
+@book{Wedhorn,
+    shorthand = {GW},
+    author = {Wedhorn, Torsten; Gortz, Ulrich},
+    title = {Algebraic Geometry I: Schemes With Examples and Exercises},
+    publisher = {Vieweg+Teubner Verlag},
+    year = {2010},
+}
+
+
 @book{Hartshorne,
     shorthand = {Har},
     author = {Hartshorne, Robin},
@@ -84,4 +94,157 @@
     year = {2011},
     number = {2},
     pages = {411--432},
+}
+
+
+
+
+
+
+
+
+
+
+@book{huybrechts_geometry_2023,
+    shorthand = {Huy23},
+	edition = {1},
+	title = {The {Geometry} of {Cubic} {Hypersurfaces}},
+	copyright = {https://www.cambridge.org/core/terms},
+	isbn = {9781009280020 9781009280006},
+	url = {https://www.cambridge.org/core/product/identifier/9781009280020/type/book},
+	abstract = {Cubic hypersurfaces are described by almost the simplest possible polynomial equations, yet their behaviour is rich enough to demonstrate many of the central challenges in algebraic geometry. With exercises and detailed references to the wider literature, this thorough text introduces cubic hypersurfaces and all the techniques needed to study them. The book starts by laying the foundations for the study of cubic hypersurfaces and of many other algebraic varieties, covering cohomology and Hodge theory of hypersurfaces, moduli spaces of those and Fano varieties of linear subspaces contained in hypersurfaces. The next three chapters examine the general machinery applied to cubic hypersurfaces of dimension two, three, and four. Finally, the author looks at cubic hypersurfaces from a categorical point of view and describes motivic features. Based on the author's lecture courses, this is an ideal text for graduate students as well as an invaluable reference for researchers in algebraic geometry.},
+	urldate = {2024-04-15},
+	publisher = {Cambridge University Press},
+	author = {Huybrechts, Daniel},
+	month = jun,
+	year = {2023},
+	doi = {10.1017/9781009280020},
+}
+
+@book{arapura_algebraic_2012,
+    shorthand = {Arapura},
+	address = {Boston, MA},
+	series = {Universitext},
+	title = {Algebraic {Geometry} over the {Complex} {Numbers}},
+	copyright = {https://www.springernature.com/gp/researchers/text-and-data-mining},
+	isbn = {9781461418085 9781461418092},
+	url = {https://link.springer.com/10.1007/978-1-4614-1809-2},
+	language = {en},
+	urldate = {2024-04-15},
+	publisher = {Springer US},
+	author = {Arapura, Donu},
+	year = {2012},
+	doi = {10.1007/978-1-4614-1809-2},
+}
+
+@article{hassett_special_2000,
+	title = {Special {Cubic} {Fourfolds}},
+	volume = {120},
+	issn = {1570-5846},
+	url = {https://doi.org/10.1023/A:1001706324425},
+	doi = {10.1023/A:1001706324425},
+	abstract = {A cubic fourfold is a smooth cubic hypersurface of dimension four; it is special if it contains a surface not homologous to a complete intersection. Special cubic fourfolds form a countably infinite union of irreducible families \$\$C\_d \$\$, each a divisor in the moduli space \$\$C \$\$of cubic fourfolds. For an infinite number of these families, the Hodge structure on the nonspecial cohomology of the cubic fourfold is essentially the Hodge structure on the primitive cohomology of a K3 surface. We say that this K3 surface is associated to the special cubic fourfold. In these cases, \$\$C\_d \$\$is related to the moduli space \$\$N\_d \$\$of degree d K3 surfaces. In particular, \$\$C \$\$contains infinitely many moduli spaces of polarized K3 surfaces as closed subvarieties. We can often construct a correspondence of rational curves on the special cubic fourfold parametrized by the K3 surface which induces the isomorphism of Hodge structures. For infinitely many values of d, the Fano variety of lines on the generic cubic fourfold of \$\$C\_d \$\$is isomorphic to the Hilbert scheme of length-two subschemes of an associated K3 surface.},
+	language = {en},
+	number = {1},
+	urldate = {2024-04-15},
+	journal = {Compositio Mathematica},
+	author = {Hassett, Brendan},
+	month = jan,
+	year = {2000},
+	keywords = {K3 surfaces, Noether-Lefschetz loci, period domains.},
+	pages = {1--23},
+}
+
+@article{addington_hodge_2014,
+	title = {Hodge theory and derived categories of cubic fourfolds},
+	volume = {163},
+	issn = {0012-7094},
+	url = {https://projecteuclid.org/journals/duke-mathematical-journal/volume-163/issue-10/Hodge-theory-and-derived-categories-of-cubic-fourfolds/10.1215/00127094-2738639.full},
+	doi = {10.1215/00127094-2738639},
+	number = {10},
+	urldate = {2024-04-15},
+	journal = {Duke Mathematical Journal},
+	author = {Addington, Nicolas and Thomas, Richard},
+	month = jul,
+	year = {2014},
+}
+
+@article{auel_fibrations_2014,
+	title = {Fibrations in complete intersections of quadrics, {Clifford} algebras, derived categories, and rationality problems},
+	volume = {102},
+	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {00217824},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0021782413001724},
+	doi = {10.1016/j.matpur.2013.11.009},
+	language = {en},
+	number = {1},
+	urldate = {2024-04-15},
+	journal = {Journal de Mathématiques Pures et Appliquées},
+	author = {Auel, Asher and Bernardara, Marcello and Bolognesi, Michele},
+	month = jul,
+	year = {2014},
+	pages = {249--291},
+}
+
+@misc{bernardara_semiorthogonal_2005,
+    shorthand = {Ber05},
+	title = {A semiorthogonal decomposition for {Brauer} {Severi} schemes},
+	url = {http://arxiv.org/abs/math/0511497},
+	abstract = {A semiorthogonal decomposition for the bounded derived category (the category of perfect complexes in a non smooth case) of coherent sheaves on a Brauer Severi scheme is given. It relies on bounded derived categories (categories of perfect complexes in a non smooth case) of suitably twisted coherent sheaves on the base.},
+	urldate = {2024-04-15},
+	publisher = {arXiv},
+	author = {Bernardara, Marcello},
+	month = nov,
+	year = {2005},
+	note = {arXiv:math/0511497},
+	keywords = {Mathematics - Algebraic Geometry, Mathematics - Category Theory, 14F05, 14F22, 18E30},
+}
+
+@article{huybrechts_k3_2023,
+	title = {The {K3} category of a cubic fourfold -- an update},
+	copyright = {arXiv.org perpetual, non-exclusive license},
+	url = {https://arxiv.org/abs/2303.03820},
+	doi = {10.48550/ARXIV.2303.03820},
+	abstract = {We revisit the paper with the same title from a few years back, review subsequent developments and highlight some open questions. The exposition avoids the more technical points and concentrates on the main ideas and the overall picture.},
+	urldate = {2024-04-15},
+	author = {Huybrechts, Daniel},
+	year = {2023},
+	keywords = {Algebraic Geometry (math.AG), FOS: Mathematics, FOS: Mathematics},
+}
+
+@incollection{bogomolov_derived_2010,
+    shorthand = {KuznetsovDerivedCubic},
+	address = {Boston},
+	title = {Derived {Categories} of {Cubic} {Fourfolds}},
+	volume = {282},
+	isbn = {9780817649333 9780817649340},
+	url = {https://link.springer.com/10.1007/978-0-8176-4934-0_9},
+	language = {en},
+	urldate = {2024-04-15},
+	booktitle = {Cohomological and {Geometric} {Approaches} to {Rationality} {Problems}},
+	publisher = {Birkhäuser Boston},
+	author = {Kuznetsov, Alexander},
+	editor = {Bogomolov, Fedor and Tschinkel, Yuri},
+	year = {2010},
+	doi = {10.1007/978-0-8176-4934-0_9},
+	pages = {219--243},
+}
+
+@incollection{beauville_derived_2016,
+    shorthand = {KuznetsovNotes},
+	address = {Cham},
+	title = {Derived {Categories} {View} on {Rationality} {Problems}},
+	volume = {2172},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {9783319462080 9783319462097},
+	url = {http://link.springer.com/10.1007/978-3-319-46209-7_3},
+	urldate = {2024-04-15},
+	booktitle = {Rationality {Problems} in {Algebraic} {Geometry}},
+	publisher = {Springer International Publishing},
+	author = {Kuznetsov, Alexander},
+	editor = {Pardini, Rita and Pirola, Gian Pietro},
+	collaborator = {Beauville, Arnaud and Hassett, Brendan and Kuznetsov, Alexander and Verra, Alessandro},
+	year = {2016},
+	doi = {10.1007/978-3-319-46209-7_3},
+	pages = {67--104},
 }
