--- a/commands.tex
+++ b/commands.tex
@@ -67,7 +67,7 @@
 
 \newtcbtheorem[no counter]{technicalities}{Technicalities} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{tech}
 
-\newtcbtheorem[no counter]{remark}{Remark} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{rem}
+\newtcbtheorem[use counter from = theorem]{remark}{Remark} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{rem}
 
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\coker}{coker}
@@ -128,6 +128,8 @@
 \newcommand{\tscrF}{\widetilde{\mathscr{F}}}
 \newcommand{\scrL}{\mathscr{L}}
 \newcommand{\tscrL}{\widetilde{\mathscr{L}}}
+\newcommand{\scrP}{\mathscr{P}}
+\newcommand{\tscrP}{\widetilde{\mathscr{P}}}
 
 
 % names
