--- a/commands.tex
+++ b/commands.tex
@@ -63,12 +63,13 @@
 
 \newtcbtheorem[no counter]{conjecture}{Conjecture} {theorem style = plain, colback=maincolor!30!white, coltitle=black, colframe=white, fonttitle = \upshape\bfseries,  fontupper=\itshape}{conj}
 
-\newtcbtheorem[no counter]{example}{Example} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{ex}
+\newtcbtheorem[use counter from = theorem]{example}{Example} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{ex}
 
 \newtcbtheorem[no counter]{technicalities}{Technicalities} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{tech}
 
 \newtcbtheorem[use counter from = theorem]{remark}{Remark} {theorem style = plain, colback=maincolor!10!white, coltitle=black, colframe=white, fonttitle = \upshape\itshape}{rem}
 
+\DeclareMathOperator{\adj}{adj} % adjugate matrix
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\coker}{coker}
 \DeclareMathOperator{\cone}{cone}
